--- a/index.html
+++ b/index.html
@@ -4,27 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Prática 2 - SOP</title>
 </head>
 
 <body>
-    <h1>Pratica 2 - SOP</h1>
-    &#x26c5;
-    <h4>Atualmente 21º em São Paulo</h4>
-    <h4>13º/ 23º</h4>
+    <p id="title">Pratica 2 - SOP</p>
     <div>
-        <p>&#x1f327; Amanhã</p>
-        <p>10º / 22º</p>
-    </div>
-    <div>
-        <p>&#x26c5; Sexta-feira</p>
-        <p>15º / 17º</p>
-    </div>
-    <div>
-        <p>&#9728; Sábado</p>
-        <p>25º / 28º</p>
-    </div>
-    <button>Trocar Cidade</button>
+        &#x26c5;
+        <h4>Atualmente 21º em São Paulo</h4>
+        <h4>13º/ 23º</h4>
+        <div class="weather">
+            <p>&#x1f327; Amanhã</p>
+            <p>10º / 22º</p>
+        </div>
+        <div class="weather">
+            <p>&#x26c5; Sexta-feira</p>
+            <p>15º / 17º</p>
+        </div>
+        <div class="weather">
+            <p>&#9728; Sábado</p>
+            <p>25º / 28º</p>
+        </div>
+        <button>Trocar Cidade</button>
+    </button>    
 </body>
 
 </html>
