--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Prática 2 - SOP</title>
 </head>
 
 <body>
-    <p id="title">Pratica 2 - SOP</p>
+    <h1>Pratica 2 - SOP</h1>
+    &#x26c5;
+    <h4>Atualmente 21º em São Paulo</h4>
+    <h4>13º/ 23º</h4>
     <div>
         <p>&#x1f327; Amanhã</p>
         <p>10º / 22º</p>
@@ -22,7 +24,7 @@
         <p>&#9728; Sábado</p>
         <p>25º / 28º</p>
     </div>
-    <button><a href="outraCidade.html">Trocar Cidade</a></button>
+    <button>Trocar Cidade</button>
 </body>
 
 </html>
