--- a/outraCidade.html
+++ b/outraCidade.html
@@ -4,25 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Prática 2 - SOP</title>
 </head>
 
 <body>
-    <p id="title">Pratica 2 - SOP</p>
+    <h1>Pratica 2 - SOP</h1>
+    &#x26c5;
+    <h4>Atualmente 28º em João Pessoa</h4>
+    <h4>28º/ 36º</h4>
     <div>
         <p>&#x1f327; Amanhã</p>
-        <p>10º / 22º</p>
+        <p>19º / 30º</p>
     </div>
     <div>
         <p>&#x26c5; Sexta-feira</p>
-        <p>15º / 17º</p>
+        <p>28º / 29º</p>
     </div>
     <div>
         <p>&#9728; Sábado</p>
-        <p>25º / 28º</p>
+        <p>32º / 40º</p>
     </div>
-    <button><a href="outraCidade.html">Trocar Cidade</a></button>
+    <button><a href="index.html">Trocar Cidade</a></button>
 </body>
 
 </html>
